--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,11 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ObligatoriskOpgave"
         tools:targetApi="31">
-        <activity
-            android:name=".EmailPasswordActivity"
-            android:exported="false"
-            android:label="@string/title_activity_email_password"
-            android:theme="@style/Theme.ObligatoriskOpgave.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
