--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 apply plugin: 'com.google.gms.google-services'
 dependencies {
 
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation platform('com.google.firebase:firebase-bom:31.4.0')
